# bijux-telecom

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  Makefile  Makefile.toml  README.md  SECURITY.md  audit-allowlist.toml  deny.toml  mkdocs.shared.yml  mkdocs.yml  nextest.toml
crates/bijux-gnss/: API.md  CHANGELOG.md  Cargo.toml  README.md
crates/bijux-gnss-cli/: Cargo.toml
crates/bijux-gnss-cli/src/: main.rs
crates/bijux-gnss-cli/tests/: dep_rules.rs  guardrails.rs  integration_acquisition_doppler_config.rs  integration_ca_code.rs  integration_export_synthetic_iq.rs  integration_guardrails.rs  integration_live_sky_acquisition.rs  integration_measure_synthetic_quantization.rs  integration_nav_decode.rs  integration_raw_iq_front_end_metrics.rs  integration_raw_iq_metadata.rs  integration_rinex.rs  integration_validate_bias_sinex.rs  integration_validate_capture.rs  integration_validate_config.rs  integration_validate_synthetic_iq.rs  integration_validate_synthetic_navigation.rs  rinex.rs
crates/bijux-gnss-core/: API.md  CHANGELOG.md  Cargo.toml  README.md
crates/bijux-gnss-core/docs/: ARCHITECTURE.md  BOUNDARY.md  CHANGE_RULES.md  CONTRACTS.md  CONTRACT_MAP.md  DIAGNOSTICS.md  INVARIANTS.md  PUBLIC_API.md  SERIALIZATION.md  SUPPORT_MATRIX.md  TESTS.md
crates/bijux-gnss-core/src/: api.rs  artifact.rs  config.rs  conventions.rs  core_obs.rs  core_time.rs  core_types.rs  diagnostic.rs  error.rs  geo.rs  ids.rs  lib.rs  nav_solution.rs  obs.rs  obs_validation.rs  observation.rs  observation_quality.rs  reference_validation.rs  stats.rs  support_matrix.rs  time.rs  units.rs
crates/bijux-gnss-core/tests/: guardrails.rs  integration_beidou_b1_registry.rs  integration_beidou_b2_registry.rs  integration_galileo_e1_registry.rs  integration_galileo_e5_registry.rs  integration_glonass_l1_registry.rs  integration_guardrails.rs  integration_signal_wavelengths.rs  nav_artifact_validation.rs  prop_obs_epoch.rs  prop_timekeeping.rs  public_api_guardrail.rs  timekeeping.proptest-regressions  timekeeping.rs  tracking_artifact_validation.rs
crates/bijux-gnss-dev/: CHANGELOG.md  Cargo.toml  README.md
crates/bijux-gnss-dev/docs/: ARCHITECTURE.md  AUDIT_POLICY.md  BENCHMARKS.md  BOUNDARY.md  COMMANDS.md  CONTRACTS.md  GOVERNANCE_FILES.md  OUTPUTS.md  PUBLIC_API.md  TESTS.md  WORKFLOWS.md
crates/bijux-gnss-dev/src/: main.rs
crates/bijux-gnss-dev/tests/: integration_guardrails.rs  integration_nextest_suite_selection.rs  integration_shared_make_contract.rs
crates/bijux-gnss-infra/: API.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/bijux-gnss-infra-fuzz/: Cargo.toml
crates/bijux-gnss-infra-fuzz/fuzz_targets/: dataset_registry_toml.rs
crates/bijux-gnss-infra-fuzz/src/: lib.rs
crates/bijux-gnss-infra-fuzz/tests/: integration_guardrails.rs
crates/bijux-gnss-infra/docs/: ARCHITECTURE.md  BOUNDARY.md  CONTRACTS.md  DATASETS.md  EXPERIMENTS.md  HASHING.md  OVERRIDES.md  PUBLIC_API.md  RUN_LAYOUT.md  TESTS.md  VALIDATION.md
crates/bijux-gnss-infra/fuzz/: Cargo.toml
crates/bijux-gnss-infra/src/: api.rs  artifact_tools.rs  commands.rs  dataset.rs  datasets.rs  errors.rs  experiment.rs  experiments.rs  hash.rs  lib.rs  reference_validation.rs  run_layout.rs  stats.rs  sweep.rs  validate_reference.rs
crates/bijux-gnss-infra/tests/: integration_guardrails.rs  integration_overrides.rs
crates/bijux-gnss-nav/: API.md  CHANGELOG.md  Cargo.toml  README.md
crates/bijux-gnss-nav-fuzz/: Cargo.toml
crates/bijux-gnss-nav-fuzz/fuzz_targets/: rinex_observation_header.rs
crates/bijux-gnss-nav-fuzz/src/: lib.rs
crates/bijux-gnss-nav/benches/: bench_ekf_update.rs  bench_precise_products.rs
crates/bijux-gnss-nav/docs/: ARCHITECTURE.md  BOUNDARY.md  CONTRACTS.md  CORRECTIONS.md  ESTIMATION.md  FORMATS.md  MODELS.md  ORBITS.md  PUBLIC_API.md  TESTS.md  TIME.md
crates/bijux-gnss-nav/fuzz/: Cargo.toml
crates/bijux-gnss-nav/src/: api.rs  artifact.rs  atmosphere.rs  clk.rs  corrections.rs  ekf.rs  ekf_models.rs  ekf_traits.rs  ekf_types.rs  ephemeris.rs  estimation.rs  formats.rs  gps.rs  gps_bits.rs  gps_orbit.rs  lib.rs  linalg.rs  position.rs  ppp.rs  ppp_config.rs  ppp_measurements.rs  sp3.rs  time.rs
crates/bijux-gnss-nav/tests/: clk.rs  ephemeris_provider.rs  fault_injection.rs  golden_lnav_fixture.rs  guardrails.rs  integration_beidou_navigation_decode.rs  integration_beidou_satellite_state.rs  integration_bias_sinex_corrections.rs  integration_broadcast_clock_reference.rs  integration_broadcast_ionosphere_residuals.rs  integration_broadcast_orbit_accuracy.rs  integration_broadcast_orbit_accuracy_budget.rs  integration_broadcast_orbit_reference.rs  integration_broadcast_orbit_samples.rs  integration_broadcast_orbit_summary.rs  integration_broadcast_products_orbit_accuracy.rs  integration_checkpoint.rs  integration_clk.rs  integration_clk_products.rs  integration_clk_reference_accuracy.rs  integration_dual_frequency_compatibility.rs  integration_earth_rotation_correction.rs  integration_ephemeris_provider.rs  integration_galileo_broadcast_ionosphere_solver.rs  integration_galileo_satellite_state.rs  integration_geometry_dops.rs  integration_glonass_broadcast_orbit_reference.rs  integration_glonass_navigation_decode.rs  integration_gps_broadcast_ionosphere_model.rs  integration_gps_broadcast_ionosphere_public_data.rs  integration_gps_broadcast_ionosphere_solver.rs  integration_guardrails.rs  integration_impossible_geometry.rs  integration_iono_free_code.rs  integration_iono_free_phase.rs  integration_measured_ionosphere.rs  integration_measured_ionosphere_gps_l5.rs  (+57 more)
crates/bijux-gnss-policies/: API.md  CHANGELOG.md  Cargo.toml  README.md
crates/bijux-gnss-receiver/: API.md  CHANGELOG.md  Cargo.toml  README.md
crates/bijux-gnss-signal/: API.md  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
crates/bijux-gnss-testkit/: API.md  CHANGELOG.md  Cargo.toml  README.md
crates/bijux-guardrails/: API.md  Cargo.toml
crates/bijux-telecom-dev/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse.rs
(+2110 files in other folders)
