[workspace]
resolver = "2"
members = [
  "crates/bijux-gnss",
  "crates/bijux-gnss-core",
  "crates/bijux-gnss-receiver",
  "crates/bijux-gnss-cli",
  "crates/bijux-gnss-signal",
  "crates/bijux-gnss-nav",
  "crates/bijux-gnss-infra",
  "crates/bijux-gnss-testkit",
  "crates/bijux-gnss-policies",
  "crates/bijux-telecom-dev",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
regex = "1.12"
walkdir = "2.5"
clap = { version = "4.6", features = ["derive"] }
rustfft = "6.2"
num-complex = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "1.2"
jsonschema = "0.46"
sha2 = "0.11"
hex = "0.4"
proptest = "1.11"
criterion = "0.8"
toml = "1.1"
eyre = "0.6"
bijux-gnss-core = { path = "crates/bijux-gnss-core" }
bijux-gnss-infra = { path = "crates/bijux-gnss-infra" }
bijux-gnss-policies = { path = "crates/bijux-gnss-policies" }

[workspace.lints.clippy]
module_name_repetitions = "allow"
