[package]
name = "bijux-gnss-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
bijux-gnss-receiver = { path = "../bijux-gnss-receiver", version = "0.1.0" }
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }
bijux-gnss-nav = { path = "../bijux-gnss-nav", version = "0.1.0" }
bijux-gnss-signal = { path = "../bijux-gnss-signal", version = "0.1.0" }
bijux-gnss-infra = { path = "../bijux-gnss-infra", version = "0.1.0" }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
eyre.workspace = true
jsonschema = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
default = ["precise-products"]
precise-products = ["bijux-gnss-nav/precise-products"]
tracing = ["bijux-gnss-receiver/tracing", "dep:tracing-subscriber"]
schema-validate = ["dep:jsonschema", "dep:schemars"]

[[bin]]
name = "bijux"
path = "src/main.rs"

[dev-dependencies]
bijux-guardrails.workspace = true
