[package]
name = "bijux-gnss-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }
bijux-gnss-receiver = { path = "../bijux-gnss-receiver", version = "0.1.0" }
bijux-gnss-nav = { path = "../bijux-gnss-nav", version = "0.1.0" }
