[package]
name = "bijux-gnss-infra"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
bijux-gnss-receiver = { path = "../bijux-gnss-receiver", version = "0.1.0", default-features = false }

[dev-dependencies]
bijux-guardrails = { path = "../bijux-guardrails", version = "0.1.0" }

[features]
default = ["nav"]
nav = ["bijux-gnss-receiver/nav"]
precise-products = ["bijux-gnss-receiver/precise-products"]
tracing = ["bijux-gnss-receiver/tracing"]
