[package]
name = "bijux-gnss-nav-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bijux-gnss-nav = { path = "../bijux-gnss-nav", version = "0.1.0" }

[dev-dependencies]
bijux-gnss-policies = { path = "../bijux-gnss-policies", version = "0.1.0" }

[[bin]]
name = "rinex_observation_header"
path = "fuzz_targets/rinex_observation_header.rs"
test = false
doc = false
bench = false
