[package]
name = "bijux-gnss-nav"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
hex.workspace = true
eyre.workspace = true
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }

[features]
default = ["precise-products"]
precise-products = []

[dev-dependencies]
criterion = "0.5"
bijux-guardrails.workspace = true
