[package]
name = "bijux-gnss-nav"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
hex.workspace = true
regex.workspace = true
time.workspace = true
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }
bijux-gnss-signal = { path = "../bijux-gnss-signal", version = "0.1.0" }

[features]
default = ["precise-products"]
precise-products = []

[dev-dependencies]
criterion = "0.8"
bijux-gnss-policies.workspace = true
bijux-gnss-testkit = { path = "../bijux-gnss-testkit", version = "0.1.0" }
serde_json.workspace = true
