[package]
name = "bijux-gnss-nav"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GNSS navigation products, corrections, positioning, RTK, PPP, and integrity algorithms"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-gnss-nav/latest/bijux_gnss_nav/"
readme = "README.md"
categories = ["aerospace", "science::geo", "algorithms"]
keywords = ["gnss", "navigation", "positioning", "rtk", "ppp"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
hex.workspace = true
regex.workspace = true
time.workspace = true
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }
bijux-gnss-signal = { path = "../bijux-gnss-signal", version = "0.1.0" }

[features]
default = ["precise-products"]
precise-products = []

[dev-dependencies]
criterion.workspace = true
bijux-gnss-policies.workspace = true
bijux-gnss-testkit = { path = "../bijux-gnss-testkit", version = "0.1.0" }
serde_json.workspace = true
