[package]
name = "bijux-gnss-policies"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
regex = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
