[package]
name = "bijux-gnss-policies"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Repository-only architecture and quality policy checks for bijux-gnss"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["bijux", "gnss", "policy", "architecture", "quality"]
publish = false

[dependencies]
regex = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
