[package]
name = "bijux-gnss-receiver"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
bijux-gnss-signal = { path = "../bijux-gnss-signal", version = "0.1.0" }
num-complex.workspace = true
rustfft.workspace = true
tracing = { workspace = true, optional = true }
serde.workspace = true
schemars.workspace = true
sha2.workspace = true
hex.workspace = true
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }
bijux-gnss-nav = { path = "../bijux-gnss-nav", version = "0.1.0", optional = true, default-features = false }
serde_json.workspace = true

[features]
default = ["nav"]
nav = ["dep:bijux-gnss-nav"]
precise-products = ["nav", "bijux-gnss-nav/precise-products"]
tracing = ["dep:tracing"]
trace-dump = []
alloc-trace = []
trace-heavy = ["trace-dump"]
reference-checks = []
alloc-audit = ["alloc-trace"]

[dev-dependencies]
criterion = "0.8"
proptest.workspace = true
toml.workspace = true
bijux-gnss-policies.workspace = true
