[package]
name = "bijux-gnss-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GNSS signal catalogs, spreading codes, raw samples, replicas, and DSP primitives"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bijux-gnss-signal/latest/bijux_gnss_signal/"
readme = "README.md"
categories = ["aerospace", "science::geo", "algorithms"]
keywords = ["gnss", "gps", "galileo", "dsp", "signals"]

[dependencies]
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }
num-complex.workspace = true
rustfft.workspace = true
thiserror.workspace = true
serde.workspace = true
schemars.workspace = true

[dev-dependencies]
proptest.workspace = true
bijux-gnss-policies.workspace = true
toml.workspace = true
sha2.workspace = true
