[package]
name = "bijux-gnss"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
nav = ["bijux-gnss-receiver/nav", "bijux-gnss-nav"]

[dependencies]
bijux-gnss-core = { path = "../bijux-gnss-core", version = "0.1.0" }
bijux-gnss-signal = { path = "../bijux-gnss-signal", version = "0.1.0" }
bijux-gnss-receiver = { path = "../bijux-gnss-receiver", version = "0.1.0" }
bijux-gnss-nav = { path = "../bijux-gnss-nav", version = "0.1.0", optional = true }

[dev-dependencies]
bijux-gnss-policies = { path = "../bijux-gnss-policies", version = "0.1.0" }
